# Petri-net-visualizer

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
examples/: CoffeMat.txt  H20_production.txt  mutex.txt  semaphores.txt  zad1.txt  zad2.txt
src/: README.md  edit_config.cpp  edit_config.h  engine.cpp  engine.h  generator.cpp  generator.h  globals.cpp  globals.h  help.cpp  help.h  labels.cpp  labels.h  loader.cpp  loader.h  main.cpp  object_list.cpp  object_list.h  parser.cpp  parser.h  serializer.cpp  serializer.h  tools.cpp  tools.h
